--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
